# projet_big_data_cytech_25

./: .gitignore  README.md  docker-compose.yml
ex01_data_retrieval/: build.sbt
ex01_data_retrieval/src/main/scala/fr/cytech/integration/: Main.scala
ex02_data_ingestion/: build.sbt
ex02_data_ingestion/src/main/scala/fr/cytech/integration/: Ingestion.scala  Main.scala
ex03_sql_table_creation/: creation.sql  insertion.sql
ex04_dashboard/: dashboard.ipynb  pyproject.toml
ex05_ml_prediction_service/: main.py  pyproject.toml
