[project]
name = "ex04-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
]
